@@ -1,6 +1,8 @@
 Revision history for MooseX-Types-DateTime
 
 {{$NEXT}}
+        - make all tests pass with both the current DateTime::Locale and the
+          upcoming new version (currently still in trial releases).
 
 0.12      2015-09-27 05:01:39Z
         - fix new test that may fail with older Moose
